--- a/public/Index.htm
+++ b/public/Index.htm
@@ -2,8 +2,9 @@
 <html>
   <head>
     <title>User Registration</title>
-    <script src="./server.js" defer></script>
+    <script src="../server/server.js" defer></script>
     <script src="./client.js" defer></script>
+    <script src="../server/checkExists.js" defer></script>
   </head>
   <body>
     <h1>User Registration</h1>
