REGISTER FORM WORKS. LOGIN FORM DOESN'T (404)

--- a/public/Login.htm
+++ b/public/Login.htm
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>User Registration</title>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>LogIn Page</title>
     <script src="../server/server.js" defer></script>
     <script src="./client.js" defer></script>
     <script src="../server/checkExists.js" defer></script>
-  </head>
-  <body>
-    <h1>User Registration</h1>
-    <form id="registrationForm">
+</head>
+<body>
+    <h1>User Login</h1>
+    <form id="loginForm" action="/login" method="POST">
       <label for="username">Username:</label>
       <input type="text" id="username" name="username" required />
       <br />
@@ -21,7 +23,7 @@
       <input type="password" id="password" name="password" required />
       <br />
 
-      <input type="submit" value="Register" />
+      <input type="submit" value="Log In" />
     </form>
-  </body>
+</body>
 </html>
