--- a/public/Home.htm
+++ b/public/Home.htm
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="./assets/css/forms.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home Page</title>
-</head>
-<body>
-    <h1>Welcome to the home page!</h1>
-</body>
+  </head>
+  <body>
+    <h1 style="text-align: center">Welcome to the home page!</h1>
+    <h4 id="">Balance:</h4>
+    <button onclick="addCount()">Click Me</button>
+  </body>
 </html>
