--- a/public/Login.htm
+++ b/public/Login.htm
@@ -1,29 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html>
+  <head>
     <title>LogIn Page</title>
-    <script src="../server/server.js" defer></script>
-    <script src="./client.js" defer></script>
-    <script src="../server/checkExists.js" defer></script>
-</head>
-<body>
-    <h1>User Login</h1>
-    <form id="loginForm" action="/login" method="POST">
-      <label for="username">Username:</label>
-      <input type="text" id="username" name="username" required />
-      <br />
+    <link rel="stylesheet" href="./assets/css/forms.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <script src="./assets/js/client.js" defer></script>
+  </head>
+  <body>
+    <div class="container">
+      <h1>User Login</h1>
+      <form id="loginForm" onsubmit="handleLoginSubmit(event)" method="POST">
+        <label for="email"
+          ><i class="fa fa-envelope" aria-hidden="true"></i> Email:</label
+        >
+        <input type="email" id="email" name="email" required />
 
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required />
-      <br />
+        <label for="password"
+          ><i class="fa fa-key" aria-hidden="true"></i> Password:</label
+        >
+        <input type="password" id="password" name="password" required />
 
-      <label for="password">Password:</label>
-      <input type="password" id="password" name="password" required />
-      <br />
-
-      <input type="submit" value="Log In" />
-    </form>
-</body>
+        <input type="submit" value="Log In" />
+      </form>
+    </div>
+    <div
+      class="alert danger"
+      role="alert"
+      id="loginAlert"
+      style="display: none"
+    ></div>
+  </body>
 </html>
