--- a/public/Home.htm
+++ b/public/Home.htm
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/forms.css" />
+    <script src="./assets/js/game.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home Page</title>
   </head>
