--- a/public/Home.htm
+++ b/public/Home.htm
@@ -2,14 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./assets/css/forms.css" />
+    <link rel="stylesheet" href="./assets/css/game.css" />
     <script src="./assets/js/game.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home Page</title>
   </head>
   <body>
-    <h1 style="text-align: center">Welcome to the home page!</h1>
-    <h4 id="">Balance:</h4>
-    <button onclick="addCount()">Click Me</button>
+    <div class="container">
+      <h1>Welcome to the home page!</h1>
+      <h4 id="balanceAmount">Balance:</h4>
+      <button onclick="addCount(event)">Click Me</button>
+    </div>
   </body>
 </html>
