--- a/public/Login.htm
+++ b/public/Login.htm
@@ -24,6 +24,7 @@
         <input type="password" id="password" name="password" required />
 
         <input type="submit" value="Log In" />
+        <a href="Register.htm">Register</a>
       </form>
     </div>
     <div
