--- a/public/Register.htm
+++ b/public/Register.htm
@@ -35,7 +35,8 @@
         <input type="password" id="password2" name="password" required />
         <br />
 
-        <input type="submit" value="Register" />
+        <input type="submit" value="Register" /><br />
+        <a href="Login.htm">Login</a>
       </form>
     </div>
     <div
