--- a/public/Home.htm
+++ b/public/Home.htm
@@ -12,6 +12,7 @@
       <h1>Welcome to the home page!</h1>
       <h4 id="balanceAmount">Balance:</h4>
       <button onclick="addCount(event)">Click Me</button>
+      <button onclick="signOut(event)" class="signout">Sign Out</button>
     </div>
   </body>
 </html>
