--- a/public/Register.htm
+++ b/public/Register.htm
@@ -7,7 +7,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <script src="./assets/js/client.js" defer></script>
+    <script src="./assets/js/Client.js" defer></script>
   </head>
   <body>
     <div class="container">
