Remove event param

--- a/public/Home.htm
+++ b/public/Home.htm
@@ -38,10 +38,8 @@
     </div>
 
     <div class="footer">
-      <button onclick="deleteData(event)" class="press danger">
-        Delete Data
-      </button>
-      <button onclick="deleteAccount(event)" class="press danger">
+      <button onclick="deleteData()" class="press danger">Delete Data</button>
+      <button onclick="deleteAccount()" class="press danger">
         Delete Account
       </button>
     </div>
