--- a/public/Home.htm
+++ b/public/Home.htm
@@ -35,6 +35,9 @@
       <div class="item" id="item5">
         <h1 class="title">20x</h1>
       </div>
+      <div class="item" id="item5">
+        <h1 class="title">50x</h1>
+      </div>
     </div>
 
     <div class="footer">
